# tonic-demo

./: Cargo.toml  README.md  build.rs  startup.sh
src/: lib.rs
src/google/: google.api.rs  google.pubsub.v1.rs
src/helloworld/: client.rs
src/pubsub/: server.rs
