[package]
name = "tonic-demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "helloworld-server"
path = "src/helloworld/server.rs"

[[bin]]
name = "helloworld-client"
path = "src/helloworld/client.rs"

[[bin]]
name = "echo-server"
path = "src/echo/server.rs"

[[bin]]
name = "echo-client"
path = "src/echo/client.rs"

[[bin]]
name = "pubsub-server"
path = "src/pubsub/server.rs"

[[bin]]
name = "pubsub-client"
path = "src/pubsub/client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.9.2"
prost = "0.11.9"
prost-types = "0.11.9"
#tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }

[build-dependencies]
tonic-build = { version = "0.9.2", features = ["prost"] }